@@ -886,10 +886,6 @@
         <translation></translation>
     </message>
     <message>
-        <source>...</source>
-        <translation>...</translation>
-    </message>
-    <message>
         <source>Use system icon set</source>
         <translation>Rendszer ikonkészletének használata</translation>
     </message>
@@ -964,6 +960,10 @@
     <message>
         <source>Hide artist metadata</source>
         <translation>Előadó metaadat elrejtése</translation>
+    </message>
+    <message>
+        <source>Automatically restore main window when new video file is loaded</source>
+        <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
