@@ -143,6 +143,7 @@ void SettingsWidget::InitSettings()
 	QMPSettings.init("BlurCovers", true);
 	QMPSettings.init("ShowDirCovers", true);
 	QMPSettings.init("AutoOpenVideoWindow", true);
+	QMPSettings.init("AutoRestoreMainWindowOnVideo", true);
 	if (!QMPSettings.contains("AutoUpdates"))
 		QMPSettings.init("AutoUpdates", !QFile::exists(QMPlay2Core.getShareDir() + "noautoupdates"));
 	QMPSettings.init("MainWidget/TabPositionNorth", false);
@@ -349,6 +350,7 @@ SettingsWidget::SettingsWidget(int page, const QString &moduleName, QWidget *vid
 		page1->showDirCoversB->setChecked(QMPSettings.getBool("ShowDirCovers"));
 
 		page1->autoOpenVideoWindowB->setChecked(QMPSettings.getBool("AutoOpenVideoWindow"));
+		page1->autoRestoreMainWindowOnVideoB->setChecked(QMPSettings.getBool("AutoRestoreMainWindowOnVideo"));
 
 		page1->autoUpdatesB->setChecked(QMPSettings.getBool("AutoUpdates"));
 #ifndef UPDATER
@@ -789,6 +791,7 @@ void SettingsWidget::apply()
 			QMPSettings.set("BlurCovers", page1->blurCoversB->isChecked());
 			QMPSettings.set("ShowDirCovers", page1->showDirCoversB->isChecked());
 			QMPSettings.set("AutoOpenVideoWindow", page1->autoOpenVideoWindowB->isChecked());
+			QMPSettings.set("AutoRestoreMainWindowOnVideo", page1->autoRestoreMainWindowOnVideoB->isChecked());
 			QMPSettings.set("AutoUpdates", page1->autoUpdatesB->isChecked());
 			QMPSettings.set("MainWidget/TabPositionNorth", page1->tabsNorths->isChecked());
 #ifdef QMPLAY2_ALLOW_ONLY_ONE_INSTANCE
