@@ -3,6 +3,7 @@ Changes in QMPlay2 build 18.02.24:
 	- add option to automatically perform non-recursive quick sync on playlist group,
 	- add high quality video scaling in OpenGL2 video output (disabled by default),
 	- add bit-perfect audio option for PortAudio module on macOS (René Bertin),
+	- automatically restore main window when new video file is loaded (option),
 	- move "My radio stations" into "Radio Browser" tab and add Drag and drop,
 	- properly open YouTube M3U8 live streams (through youtube-dl),
 	- don't unpause when seeking (default option),
